--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
     - rust: 1.20.0
     - rust: stable
     - rust: beta
-    - rust: nightly-2018-01-03
+    - rust: nightly
   allow_failures:
     - rust: nightly
     - rust: beta
