--- a/examples/diesel/Cargo.toml
+++ b/examples/diesel/Cargo.toml
@@ -7,7 +7,7 @@ workspace = "../.."
 [dependencies]
 env_logger = "0.4"
 actix = "0.4"
-actix-web = { git = "https://github.com/actix/actix-web" }
+actix-web = { path = "../../" }
 
 futures = "0.1"
 uuid = { version = "0.5", features = ["serde", "v4"] }
