--- a/examples/template_tera/Cargo.toml
+++ b/examples/template_tera/Cargo.toml
@@ -7,5 +7,5 @@ workspace = "../.."
 [dependencies]
 env_logger = "0.4"
 actix = "0.4"
-actix-web = { git = "https://github.com/actix/actix-web" }
+actix-web = { path = "../../" }
 tera = "*"
