--- a/examples/tls/Cargo.toml
+++ b/examples/tls/Cargo.toml
@@ -11,4 +11,4 @@ path = "src/main.rs"
 [dependencies]
 env_logger = "0.4"
 actix = "^0.4.2"
-actix-web = { git = "https://github.com/actix/actix-web", features=["alpn"] }
+actix-web = { path = "../../", features=["alpn"] }
