--- a/examples/websocket-chat/Cargo.toml
+++ b/examples/websocket-chat/Cargo.toml
@@ -26,4 +26,4 @@ serde_json = "1.0"
 serde_derive = "1.0"
 
 actix = "^0.4.2"
-actix-web = { git = "https://github.com/actix/actix-web" }
+actix-web = { path="../../" }
