--- a/examples/actix_web_cors/backend/Cargo.toml
+++ b/examples/actix_web_cors/backend/Cargo.toml
@@ -1,17 +1,17 @@
 [package]
-name = "Actix-web-CORS"
+name = "actix-web-cors"
 version = "0.1.0"
 authors = ["krircc <krircc@aliyun.com>"]
+workspace = "../../../"
 
 [dependencies]
-serde = "^1.0.0"
-serde_derive = "^1.0.0"
-serde_json = "^1.0.0"
-http = "^0.1.0"
-num_cpus = "1.0"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
+http = "0.1"
 
-actix = "^0.4.0"
-actix-web = { git = "https://github.com/actix/actix-web" }
-dotenv = "^0.10.0"
-env_logger = "^0.5.0"
+actix = "0.4.5"
+actix-web = { path = "../../../" }
+dotenv = "0.10"
+env_logger = "0.5"
 futures = "0.1"
