--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -61,4 +61,4 @@ build: false
 test_script:
   - cargo build --no-default-features
   - cargo clean
-  - cargo test --no-default-features
+  - RUST_BACKTRACE=1 cargo test --no-default-features
