--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,7 +78,8 @@ tokio-openssl = { version="0.2", optional = true }
 
 [dependencies.actix]
 #version = "^0.4.6"
-git = "https://github.com/actix/actix.git"
+#git = "https://github.com/actix/actix.git"
+path = "../actix"
 
 [dev-dependencies]
 env_logger = "0.5"
