Update most examples to use actix from git (#68)

--- a/examples/diesel/Cargo.toml
+++ b/examples/diesel/Cargo.toml
@@ -6,7 +6,7 @@ workspace = "../.."
 
 [dependencies]
 env_logger = "0.5"
-actix = "0.4"
+actix = { git = "https://github.com/actix/actix.git/" }
 actix-web = { path = "../../" }
 
 futures = "0.1"
