--- a/examples/websocket/Cargo.toml
+++ b/examples/websocket/Cargo.toml
@@ -16,6 +16,5 @@ path = "src/client.rs"
 env_logger = "*"
 futures = "0.1"
 tokio-core = "0.1"
-#actix = "^0.4.6"
-actix = { git = "https://github.com/actix/actix.git" }
+actix = "0.5"
 actix-web = { path="../../" }
