--- a/examples/basics/Cargo.toml
+++ b/examples/basics/Cargo.toml
@@ -7,5 +7,5 @@ workspace = "../.."
 [dependencies]
 futures = "*"
 env_logger = "0.5"
-actix = { git = "https://github.com/actix/actix.git" }
+actix = "0.5"
 actix-web = { path="../.." }
