--- a/examples/json/Cargo.toml
+++ b/examples/json/Cargo.toml
@@ -14,5 +14,5 @@ serde_json = "1.0"
 serde_derive = "1.0"
 json = "*"
 
-actix = { git = "https://github.com/actix/actix.git" }
+actix = "0.5"
 actix-web = { path="../../" }
