--- a/examples/multipart/Cargo.toml
+++ b/examples/multipart/Cargo.toml
@@ -11,5 +11,5 @@ path = "src/main.rs"
 [dependencies]
 env_logger = "*"
 futures = "0.1"
-actix = { git = "https://github.com/actix/actix.git" }
+actix = "0.5"
 actix-web = { path="../../" }
