--- a/examples/r2d2/Cargo.toml
+++ b/examples/r2d2/Cargo.toml
@@ -6,7 +6,7 @@ workspace = "../.."
 
 [dependencies]
 env_logger = "0.5"
-actix = { git = "https://github.com/actix/actix.git/" }
+actix = "0.5"
 actix-web = { path = "../../" }
 
 futures = "0.1"
