--- a/examples/state/Cargo.toml
+++ b/examples/state/Cargo.toml
@@ -7,6 +7,5 @@ workspace = "../.."
 [dependencies]
 futures = "*"
 env_logger = "0.5"
-#actix = "0.4.6"
-actix = {git = "https://github.com/actix/actix.git"}
+actix = "0.5"
 actix-web = { path = "../../" }
