--- a/examples/tls/Cargo.toml
+++ b/examples/tls/Cargo.toml
@@ -10,6 +10,6 @@ path = "src/main.rs"
 
 [dependencies]
 env_logger = "0.5"
-actix = { git = "https://github.com/actix/actix.git" }
+actix = "0.5"
 actix-web = { path = "../../", features=["alpn"] }
 openssl = { version="0.10" }
