--- a/examples/web-cors/backend/Cargo.toml
+++ b/examples/web-cors/backend/Cargo.toml
@@ -10,7 +10,7 @@ serde_derive = "1.0"
 serde_json = "1.0"
 http = "0.1"
 
-actix = { git = "https://github.com/actix/actix.git" }
+actix = "0.5"
 actix-web = { path = "../../../" }
 dotenv = "0.10"
 env_logger = "0.5"
