--- a/examples/websocket-chat/Cargo.toml
+++ b/examples/websocket-chat/Cargo.toml
@@ -25,5 +25,5 @@ serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
 
-actix = { git="https://github.com/actix/actix.git" }
+actix = "0.5"
 actix-web = { path="../../" }
