--- a/Cargo.toml
+++ b/Cargo.toml
@@ -77,6 +77,7 @@ tokio-tls = { version="0.1", optional = true }
 openssl = { version="0.10", optional = true }
 tokio-openssl = { version="0.2", optional = true }
 
+backtrace="*"
 [dependencies.actix]
 version = "0.5"
 
