--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,7 +81,7 @@ openssl = { version="0.10", optional = true }
 tokio-openssl = { version="0.2", optional = true }
 
 [dependencies.actix]
-version = "0.5"
+version = "^0.5.1"
 
 [dev-dependencies]
 env_logger = "0.5"
