create default CpuPool

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,6 +74,7 @@ net2 = "0.2"
 bytes = "0.4"
 byteorder = "1"
 futures = "0.1"
+futures-cpupool = "0.1"
 tokio-io = "0.1"
 tokio-core = "0.1"
 trust-dns-resolver = "0.8"
