--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,9 @@ alpn = ["openssl", "openssl/v102", "openssl/v110", "tokio-openssl"]
 # sessions
 session = ["cookie/secure"]
 
+# protobuf
+protobuf = ["prost"]
+
 [dependencies]
 actix = "^0.5.2"
 
@@ -60,7 +63,6 @@ rand = "0.4"
 regex = "0.2"
 serde = "1.0"
 serde_json = "1.0"
-prost = "^0.2"
 sha1 = "0.6"
 smallvec = "0.6"
 time = "0.1"
@@ -87,6 +89,9 @@ tokio-tls = { version="0.1", optional = true }
 # openssl
 openssl = { version="0.10", optional = true }
 tokio-openssl = { version="0.2", optional = true }
+
+# protobuf
+prost = { version="^0.2", optional = true }
 
 [dev-dependencies]
 env_logger = "0.5"
