--- a/examples/protobuf/Cargo.toml
+++ b/examples/protobuf/Cargo.toml
@@ -12,4 +12,4 @@ prost = "0.2.0"
 prost-derive = "0.2.0"
 
 actix = "0.5"
-actix-web = { path="../../" }
+actix-web = { path="../../", features=["protobuf"] }
