add path and query extractors

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,6 +62,7 @@ rand = "0.4"
 regex = "0.2"
 serde = "1.0"
 serde_json = "1.0"
+serde_urlencoded = "0.5"
 sha1 = "0.6"
 smallvec = "0.6"
 time = "0.1"
