use r2d2 for diesel example

--- a/examples/diesel/Cargo.toml
+++ b/examples/diesel/Cargo.toml
@@ -15,5 +15,7 @@ serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
 
-diesel = { version = "1.0.0-beta1", features = ["sqlite"] }
+diesel = { version = "1.0", features = ["sqlite"] }
+r2d2 = "0.8"
+r2d2-diesel = "1.0"
 dotenv = "0.10"
