--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -59,4 +59,4 @@ build: false
 
 # Equivalent to Travis' `script` phase
 test_script:
-  - cargo test --no-default-features
+  - cargo test --no-default-features --features="flate2-rust"
