--no-count for tarpaulin

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ script:
   - |
     if [[ "$TRAVIS_RUST_VERSION" == "beta" ]]; then
     bash <(curl https://raw.githubusercontent.com/xd009642/tarpaulin/master/travis-install.sh)
-    USE_SKEPTIC=1 cargo tarpaulin --out Xml
+    USE_SKEPTIC=1 cargo tarpaulin --out Xml --no-count
     bash <(curl -s https://codecov.io/bash)
     echo "Uploaded code coverage"
     fi
