--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,7 @@ base64 = "0.9"
 bitflags = "1.0"
 failure = "0.1.1"
 h2 = "0.1"
+fnv = "1.0.5"
 http = "^0.1.5"
 httparse = "1.2"
 http-range = "0.1"
