--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,9 +50,7 @@ flate2-rust = ["flate2/rust_backend"]
 features = ["tls", "alpn", "session", "brotli", "flate2-c"]
 
 [dependencies]
-#actix = "^0.6.0"
-actix = { git="https://github.com/actix/actix.git" }
-
+actix = "0.6"
 base64 = "0.9"
 bitflags = "1.0"
 failure = "0.1.1"
@@ -77,7 +75,7 @@ time = "0.1"
 encoding = "0.2"
 language-tags = "0.2"
 lazy_static = "1.0"
-parking_lot = "0.5"
+parking_lot = "0.6"
 url = { version="1.7", features=["query_encoding"] }
 cookie = { version="0.10", features=["percent-encode"] }
 brotli2 = { version="^0.3.2", optional = true }
