Properly escape special characters in fs/directory_listing. (#355)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,7 @@ base64 = "0.9"
 bitflags = "1.0"
 failure = "0.1.1"
 h2 = "0.1"
+htmlescape = "0.3"
 http = "^0.1.5"
 httparse = "1.2"
 log = "0.4"
