--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,8 +50,7 @@ flate2-c = ["flate2/miniz-sys"]
 flate2-rust = ["flate2/rust_backend"]
 
 [dependencies]
-# actix = "0.7.0"
-actix = { git="https://github.com/actix/actix.git" }
+actix = "0.7.0"
 
 base64 = "0.9"
 bitflags = "1.0"
