--- a/.travis.yml
+++ b/.travis.yml
@@ -36,8 +36,8 @@ script:
     fi
   - |
     if [[ "$TRAVIS_RUST_VERSION" == "stable" ]]; then
-    bash <(curl https://raw.githubusercontent.com/xd009642/tarpaulin/master/travis-install.sh)
-    USE_SKEPTIC=1 cargo tarpaulin --features="alpn,tls" --out Xml --no-count
+    RUSTFLAGS="--cfg procmacro2_semver_exempt" cargo install cargo-tarpaulin
+    cargo tarpaulin --features="alpn,tls" --out Xml --no-count
     bash <(curl -s https://codecov.io/bash)
     echo "Uploaded code coverage"
     fi
