--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,7 +83,7 @@ cookie = { version="0.11", features=["percent-encode"] }
 brotli2 = { version="^0.3.2", optional = true }
 flate2 = { version="^1.0.2", optional = true, default-features = false }
 
-failure = "=0.1.1"
+failure = "^0.1.2"
 
 # io
 mio = "^0.6.13"
