--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,16 +2,13 @@
 name = "actix-net"
 version = "0.1.0"
 authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
-description = "Actix net utils"
+description = "Actix net - framework for the compisible network services for Rust"
 readme = "README.md"
-keywords = ["http", "framework", "async", "futures"]
+keywords = ["network", "framework", "async", "futures"]
 homepage = "https://actix.rs"
 repository = "https://github.com/actix/actix-net.git"
 documentation = "https://actix.rs/api/actix-net/stable/actix_web/"
-categories = ["network-programming", "asynchronous",
-              "web-programming::http-server",
-              "web-programming::http-client",
-              "web-programming::websocket"]
+categories = ["network-programming", "asynchronous"]
 license = "MIT/Apache-2.0"
 exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
 
@@ -44,19 +41,14 @@ actix = "0.7.0"
 
 log = "0.4"
 num_cpus = "1.0"
-rand = "0.5"
-time = "0.1"
-parking_lot = "0.6"
 failure = "^0.1.2"
 
 # io
 mio = "^0.6.13"
 net2 = "0.2"
 bytes = "0.4"
-byteorder = "1.2"
 futures = "0.1"
 slab = "0.4"
-tokio = "0.1"
 tokio-io = "0.1"
 tokio-tcp = "0.1"
 tokio-timer = "0.2"
