--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ path = "src/lib.rs"
 default = ["session", "brotli", "flate2-c"]
 
 # tls
-tls = ["native-tls"]
+tls = ["native-tls", "tokio-tls"]
 
 # openssl
 alpn = ["openssl", "tokio-openssl"]
@@ -104,6 +104,7 @@ tokio-reactor = "0.1"
 
 # native-tls
 native-tls = { version="0.2", optional = true }
+tokio-tls = { version="0.2", optional = true }
 
 # openssl
 openssl = { version="0.10", optional = true }
